@@ -1,4 +1,4 @@
-$Id: History,v 1.7 1999-10-04 15:15:28 johna Exp $
+$Id: History,v 1.8 1999-10-27 16:38:45 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Oct 26th, 99 J.Allison
+- Prepared G4VVisManager.hh and G4VGraphicsScene.hh for Software
+  Reference Manual.
 
 Oct 4th, 99 J.Allison (tag intercoms-V00-01-00)
 - Augmented G4VGraphicsScene to include AddPrimitive methods for
